# GCP_Assignment

./: .gitignore  CMakeLists.txt  UML.dia  User Guide.txt
src/: App.cpp  App.h  Camera.cpp  Camera.h  ConsoleInterface.cpp  ConsoleInterface.h  Object.cpp  Object.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  main.cpp
